force-app/main/default/objects/API_Loan_Amortization__c/API_Loan_Amortization__c.object-meta.xml
<CustomObject>
    <label>API Loan Amortization</label>
    <nameField>
        <label>API Loan Amortization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>API Loan Amortization</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>