force-app/main/default/objects/API_Loan_Amortization__c/fields/loan_calculation_id__c.field-meta.xml
<CustomField>
    <fullName>loan_calculation_id__c</fullName>
    <label>loan_calculation_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>