force-app/main/default/objects/API_Loan_Amortization__c/fields/Loan_Information__c.field-meta.xml
<CustomField>
    <fullName>Loan_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Information</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>API Loan Amortization</relationshipLabel>
    <relationshipName>API_Loan_Amortization</relationshipName>
    <type>Lookup</type>
</CustomField>