force-app/main/default/objects/API_Loan_Amortization__c/fields/principal__c.field-meta.xml
<CustomField>
    <fullName>principal__c</fullName>
    <label>principal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>