force-app/main/default/objects/API_Loan_Amortization__c/fields/provision_fee__c.field-meta.xml
<CustomField>
    <fullName>provision_fee__c</fullName>
    <label>provision_fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>