force-app/main/default/objects/API_Loan_Amortization__c/fields/related_id__c.field-meta.xml
<CustomField>
    <fullName>related_id__c</fullName>
    <label>related_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>